# ContextHarbor

./: .coverage  .gitignore  .server_manager.pid  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT_GUIDELINES.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  README.md  README_Windows.md  TODO.md  TOOL_INVESTIGATION_REPORT.md  app.py  auto_server_manager.py  cli.py  comprehensive_dns_fix.sh  config.json  docker-compose.yml  fix_dns_priority.sh  fix_tailscale_dns.sh  kiwix_proxy.py  migrate.py  network_access.py  ollama.service  requirements.txt  restart_servers.sh  router-phase1-backend.service  router-phase1.service  router.db  router.json  server_config.json  server_manager.py  session-ses_4943.md  set_ollama_threads.sh  setup-production.sh  setup.bat  setup_autostart.sh  (+5 more)
agent/: budget.py  citation.py  cli.py  config.py  context.py  controller.py  deep_research.py  defaults.py  intelligent_tools.py  intent_decoder.py  manifest.py  ollama_client.py  pipeline.py  rag.py  rate_limiter.py  registry.py  router.py  tool_learning.py  verifier.py  worker.py  worker_ollama.py  worker_opencode.py
backend/: app.py  auth.py  chat_manager.py  config.py  config_manager.py  database.py  embedding_service.py  memory_manager.py  model_manager.py  rag_service.py  research_manager.py  router.json  stats.py
chats/: 647e5f0c-a37a-4949-82cd-cd8ebd71fa48.json  fad9701e-cb1e-40d0-95e4-609bb58d3e68.json
modules/plugins/example_plugin/: README.md  pyproject.toml
modules/plugins/example_plugin/cognihub_example_plugin/: __init__.py  plugin.py
(+212 files in other folders)
