[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cognihub-example-plugin"
version = "0.1.0"
description = "Example CogniHub tool plugin"
requires-python = ">=3.11"
dependencies = [
  "cognihub",
  "pydantic>=2.6.0",
]

[tool.setuptools]
packages = ["cognihub_example_plugin"]
